--- a/src/web/index.css
+++ b/src/web/index.css
@@ -5,39 +5,49 @@
     "contents"
     "footer";
   grid-template-columns: 1fr;
-  height: 100VH;
+  height: 100%;
   width: 100%;
 }
 
 .header {
-  height: 10px;
+  height: 5%;
 }
 
 .footer {
-  height: 30;
+  height: 5%;
 }
 
 .content {
-  height: 80%;
+  height: 90%;
   padding: 0;
   margin: 0;
   -webkit-user-select: none;
   -webkit-app-region: drag;
+  margin-left: auto;
+  margin-right: auto;
 }
 .content h1{
   text-align: center;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 80%;
+  margin: 10px;
 }
 
 .clock{
   height: 100%;
   width: 100%;
   padding: 0;
-  font-size: 20vmax;
+  font-size: 50vmin;
   padding: 0;
   margin: 0;
 }
 .header {grid-area: header;}
 .content {grid-area: contents;}
 .footer {grid-area: footer;}
+
+
+body, html, .root {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
